Login And Validation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">HealthConsultancyServices</string>
       <string-array name="usertype">
         <item></item>
-        <item>Doctor</item>
-        <item>Patient</item>
+        <item>doctor</item>
+        <item>patient</item>
     </string-array>
     <string name="Checkbox">RememberMe</string>
 </resources>
